refactor: x,y values passed to each object are from top left coordinates (revert to old behaviour)